resim hatalari duzeltildi

--- a/Core_Proje/Views/Dashboard/Index.cshtml
+++ b/Core_Proje/Views/Dashboard/Index.cshtml
@@ -9,200 +9,7 @@
 
 <body>
 
-    <!-- partial:partials/_navbar.html -->
-    <nav class="navbar p-0 fixed-top d-flex flex-row">
-        <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
-        </div>
-        <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
-            <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
-                <span class="mdi mdi-menu"></span>
-            </button>
-            <ul class="navbar-nav w-100">
-                <li class="nav-item w-100">
-                    <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
-                        <input type="text" class="form-control" placeholder="Search products">
-                    </form>
-                </li>
-            </ul>
-            <ul class="navbar-nav navbar-nav-right">
-                <li class="nav-item dropdown d-none d-lg-block">
-                    <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" data-toggle="dropdown" aria-expanded="false" href="#">+ Create New Project</a>
-                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="createbuttonDropdown">
-                        <h6 class="p-3 mb-0">Projects</h6>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-file-outline text-primary"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject ellipsis mb-1">Software Development</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-web text-info"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject ellipsis mb-1">UI Development</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-layers text-danger"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject ellipsis mb-1">Software Testing</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <p class="p-3 mb-0 text-center">See all projects</p>
-                    </div>
-                </li>
-                <li class="nav-item nav-settings d-none d-lg-block">
-                    <a class="nav-link" href="#">
-                        <i class="mdi mdi-view-grid"></i>
-                    </a>
-                </li>
-                <li class="nav-item dropdown border-left">
-                    <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
-                        <i class="mdi mdi-email"></i>
-                        <span class="count bg-success"></span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
-                        <h6 class="p-3 mb-0">Messages</h6>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <img src="assets/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic">
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject ellipsis mb-1">Mark send you a message</p>
-                                <p class="text-muted mb-0"> 1 Minutes ago </p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <img src="assets/images/faces/face2.jpg" alt="image" class="rounded-circle profile-pic">
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject ellipsis mb-1">Cregh send you a message</p>
-                                <p class="text-muted mb-0"> 15 Minutes ago </p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <img src="assets/images/faces/face3.jpg" alt="image" class="rounded-circle profile-pic">
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject ellipsis mb-1">Profile picture updated</p>
-                                <p class="text-muted mb-0"> 18 Minutes ago </p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <p class="p-3 mb-0 text-center">4 new messages</p>
-                    </div>
-                </li>
-                <li class="nav-item dropdown border-left">
-                    <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
-                        <i class="mdi mdi-bell"></i>
-                        <span class="count bg-danger"></span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
-                        <h6 class="p-3 mb-0">Notifications</h6>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-calendar text-success"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject mb-1">Event today</p>
-                                <p class="text-muted ellipsis mb-0"> Just a reminder that you have an event today </p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-settings text-danger"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject mb-1">Settings</p>
-                                <p class="text-muted ellipsis mb-0"> Update dashboard </p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-link-variant text-warning"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject mb-1">Launch Admin</p>
-                                <p class="text-muted ellipsis mb-0"> New admin wow! </p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <p class="p-3 mb-0 text-center">See all notifications</p>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
-                        <div class="navbar-profile">
-                            <img class="img-xs rounded-circle" src="assets/images/faces/face15.jpg" alt="">
-                            <p class="mb-0 d-none d-sm-block navbar-profile-name">Henry Klein</p>
-                            <i class="mdi mdi-menu-down d-none d-sm-block"></i>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="profileDropdown">
-                        <h6 class="p-3 mb-0">Profile</h6>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-settings text-success"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject mb-1">Settings</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-dark rounded-circle">
-                                    <i class="mdi mdi-logout text-danger"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <p class="preview-subject mb-1">Log out</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <p class="p-3 mb-0 text-center">Advanced settings</p>
-                    </div>
-                </li>
-            </ul>
-            <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-                <span class="mdi mdi-format-line-spacing"></span>
-            </button>
-        </div>
-    </nav>
-    <!-- partial -->
+
 
     @await Component.InvokeAsync("FeatureStatistics")
 
@@ -329,7 +136,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <img src="assets/images/faces/face1.jpg" alt="image" />
+                                        <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face1.jpg" alt="image" />
                                         <span class="pl-2">Henry Klein</span>
                                     </td>
                                     <td> 02312 </td>
@@ -350,7 +157,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <img src="assets/images/faces/face2.jpg" alt="image" />
+                                        <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face2.jpg" alt="image" />
                                         <span class="pl-2">Estella Bryan</span>
                                     </td>
                                     <td> 02312 </td>
@@ -371,7 +178,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <img src="assets/images/faces/face5.jpg" alt="image" />
+                                        <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face5.jpg" alt="image" />
                                         <span class="pl-2">Lucy Abbott</span>
                                     </td>
                                     <td> 02312 </td>
@@ -392,7 +199,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <img src="assets/images/faces/face3.jpg" alt="image" />
+                                        <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face3.jpg" alt="image" />
                                         <span class="pl-2">Peter Gill</span>
                                     </td>
                                     <td> 02312 </td>
@@ -413,7 +220,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <img src="assets/images/faces/face4.jpg" alt="image" />
+                                        <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face4.jpg" alt="image" />
                                         <span class="pl-2">Sallie Reyes</span>
                                     </td>
                                     <td> 02312 </td>
@@ -443,7 +250,7 @@
                     <div class="preview-list">
                         <div class="preview-item border-bottom">
                             <div class="preview-thumbnail">
-                                <img src="assets/images/faces/face6.jpg" alt="image" class="rounded-circle" />
+                                <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face6.jpg" alt="image" class="rounded-circle" />
                             </div>
                             <div class="preview-item-content d-flex flex-grow">
                                 <div class="flex-grow">
@@ -457,7 +264,7 @@
                         </div>
                         <div class="preview-item border-bottom">
                             <div class="preview-thumbnail">
-                                <img src="assets/images/faces/face8.jpg" alt="image" class="rounded-circle" />
+                                <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face8.jpg" alt="image" class="rounded-circle" />
                             </div>
                             <div class="preview-item-content d-flex flex-grow">
                                 <div class="flex-grow">
@@ -471,7 +278,7 @@
                         </div>
                         <div class="preview-item border-bottom">
                             <div class="preview-thumbnail">
-                                <img src="assets/images/faces/face9.jpg" alt="image" class="rounded-circle" />
+                                <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face9.jpg" alt="image" class="rounded-circle" />
                             </div>
                             <div class="preview-item-content d-flex flex-grow">
                                 <div class="flex-grow">
@@ -485,7 +292,7 @@
                         </div>
                         <div class="preview-item border-bottom">
                             <div class="preview-thumbnail">
-                                <img src="assets/images/faces/face11.jpg" alt="image" class="rounded-circle" />
+                                <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face11.jpg" alt="image" class="rounded-circle" />
                             </div>
                             <div class="preview-item-content d-flex flex-grow">
                                 <div class="flex-grow">
@@ -507,20 +314,20 @@
                     <h4 class="card-title">Portfolio Slide</h4>
                     <div class="owl-carousel owl-theme full-width owl-carousel-dash portfolio-carousel" id="owl-carousel-basic">
                         <div class="item">
-                            <img src="assets/images/dashboard/Rectangle.jpg" alt="">
+                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/dashboard/Rectangle.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img src="assets/images/dashboard/Img_5.jpg" alt="">
+                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/dashboard/Img_5.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img src="assets/images/dashboard/img_6.jpg" alt="">
+                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/dashboard/img_6.jpg" alt="">
                         </div>
                     </div>
                     <div class="d-flex py-4">
                         <div class="preview-list w-100">
                             <div class="preview-item p-0">
                                 <div class="preview-thumbnail">
-                                    <img src="assets/images/faces/face12.jpg" class="rounded-circle" alt="">
+                                    <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face12.jpg" class="rounded-circle" alt="">
                                 </div>
                                 <div class="preview-item-content d-flex flex-grow">
                                     <div class="flex-grow">
