dashboard sol menu isimlendirmesi duzenlendi

--- a/Core_Proje/Views/Shared/Components/FeatureStatistics/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/FeatureStatistics/Default.cshtml
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col-3">
                         <div class="icon icon-box-success ">
-                            <span class="mdi mdi-chart-bar"></span>
+                            <span class="mdi mdi-sort-ascending"></span>
                         </div>
                     </div>
                 </div>
