--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -1,87 +1,176 @@
-﻿<div class="navbar-inner">
-    <!-- Collapse -->
-    <div class="collapse navbar-collapse" id="sidenav-collapse-main">
-        <!-- Nav items -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="dashboard.html">
-                    <i class="ni ni-tv-2 text-primary"></i>
-                    <span class="nav-link-text">Dashboard</span>
+﻿<ul class="nav">
+    <li class="nav-item profile">
+        <div class="profile-desc">
+            <div class="profile-pic">
+                <div class="count-indicator">
+                    <img class="img-xs rounded-circle " src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face15.jpg" alt="">
+                    <span class="count bg-success"></span>
+                </div>
+                <div class="profile-name">
+                    <h5 class="mb-0 font-weight-normal">Mesut Rüzgar</h5>
+                    <span>Admin</span>
+                </div>
+            </div>
+            <a href="#" id="profile-dropdown" data-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
+            <div class="dropdown-menu dropdown-menu-right sidebar-dropdown preview-list" aria-labelledby="profile-dropdown">
+                <a href="#" class="dropdown-item preview-item">
+                    <div class="preview-thumbnail">
+                        <div class="preview-icon bg-dark rounded-circle">
+                            <i class="mdi mdi-settings text-primary"></i>
+                        </div>
+                    </div>
+                    <div class="preview-item-content">
+                        <p class="preview-subject ellipsis mb-1 text-small">Account settings</p>
+                    </div>
                 </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="icons.html">
-                    <i class="ni ni-planet text-orange"></i>
-                    <span class="nav-link-text">Öne Çıkan</span>
+                <div class="dropdown-divider"></div>
+                <a href="#" class="dropdown-item preview-item">
+                    <div class="preview-thumbnail">
+                        <div class="preview-icon bg-dark rounded-circle">
+                            <i class="mdi mdi-onepassword  text-info"></i>
+                        </div>
+                    </div>
+                    <div class="preview-item-content">
+                        <p class="preview-subject ellipsis mb-1 text-small">Change Password</p>
+                    </div>
                 </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="/Skill/Index">
-                    <i class="ni ni-pin-3 text-primary"></i>
-                    <span class="nav-link-text">Yetenekler</span>
+                <div class="dropdown-divider"></div>
+                <a href="#" class="dropdown-item preview-item">
+                    <div class="preview-thumbnail">
+                        <div class="preview-icon bg-dark rounded-circle">
+                            <i class="mdi mdi-calendar-today text-success"></i>
+                        </div>
+                    </div>
+                    <div class="preview-item-content">
+                        <p class="preview-subject ellipsis mb-1 text-small">To-do list</p>
+                    </div>
                 </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="profile.html">
-                    <i class="ni ni-single-02 text-yellow"></i>
-                    <span class="nav-link-text">Hakkımda</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="ni ni-bullet-list-67 text-default"></i>
-                    <span class="nav-link-text">Hizmetler</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="login.html">
-                    <i class="ni ni-key-25 text-info"></i>
-                    <span class="nav-link-text">Projeler</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">
-                    <i class="ni ni-circle-08 text-pink"></i>
-                    <span class="nav-link-text">Deneyimler</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upgrade.html">
-                    <i class="ni ni-send text-dark"></i>
-                    <span class="nav-link-text">Referanslar</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upgrade.html">
-                    <i class="ni ni-send text-dark"></i>
-                    <span class="nav-link-text">İletişim</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upgrade.html">
-                    <i class="ni ni-send text-dark"></i>
-                    <span class="nav-link-text">Mesajlar</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upgrade.html">
-                    <i class="ni ni-send text-dark"></i>
-                    <span class="nav-link-text">Ayarlar</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upgrade.html">
-                    <i class="ni ni-send text-dark"></i>
-                    <span class="nav-link-text">İstatistikler</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upgrade.html">
-                    <i class="ni ni-send text-dark"></i>
-                    <span class="nav-link-text">Oturumu Kapat</span>
-                </a>
-            </li>
-        </ul>
-    
-    </div>
-</div>
+            </div>
+        </div>
+    </li>
+    <li class="nav-item nav-category">
+        <span class="nav-link">Navigation</span>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../index.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-speedometer"></i>
+            </span>
+            <span class="menu-title"> Gösterge Paneli</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+            <span class="menu-icon">
+                <i class="mdi mdi-laptop"></i>
+            </span>
+            <span class="menu-title">Yeteneklerim</span>
+            <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="ui-basic">
+            <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/buttons.html">Buttons</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/dropdowns.html">Dropdowns</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/typography.html">Typography</a></li>
+            </ul>
+        </div>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/forms/basic_elements.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-sort-ascending"></i>
+            </span>
+            <span class="menu-title">Deneyimler</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/tables/basic-table.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-table-large"></i>
+            </span>
+            <span class="menu-title">Tablolar</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/charts/chartjs.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-chart-bar"></i>
+            </span>
+            <span class="menu-title">Grafikler</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/icons/mdi.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-contacts"></i>
+            </span>
+            <span class="menu-title">İkonlar</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/icons/mdi.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-github-circle"></i>
+            </span>
+            <span class="menu-title">Projeler</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/icons/mdi.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-message-reply-text"></i>
+            </span>
+            <span class="menu-title">Mesajlar</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/icons/mdi.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-account-card-details"></i>
+            </span>
+            <span class="menu-title">İletişim</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/icons/mdi.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-account-network"></i>
+            </span>
+            <span class="menu-title">Referanslar</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="../../pages/icons/mdi.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-arrange-bring-to-front"></i>
+            </span>
+            <span class="menu-title">Öne Çıkan Gönderiler</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+            <span class="menu-icon">
+                <i class="mdi mdi-security"></i>
+            </span>
+            <span class="menu-title">Şifre ve Güvenlik</span>
+            <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="auth">
+            <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/blank-page.html"> Blank Page </a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 500 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/login.html"> Login </a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/register.html"> Register </a></li>
+            </ul>
+        </div>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="http://www.bootstrapdash.com/demo/corona-free/jquery/documentation/documentation.html">
+            <span class="menu-icon">
+                <i class="mdi mdi-file-document-box"></i>
+            </span>
+            <span class="menu-title">Dökümanlar</span>
+        </a>
+    </li>
+</ul>
