son 5 proje editlendi ve dashboarda tum projeler listelendi

--- a/Core_Proje/Views/Shared/Components/Last5Projects/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/Last5Projects/Default.cshtml
@@ -5,7 +5,7 @@
     <div class="card">
         <div class="card-body">
             <div class="d-flex flex-row justify-content-between">
-                <h4 class="card-title mb-1">Son Projelerim</h4>
+                <h4 class="card-title mb-1">Son 5 Proje</h4>
                 <p class="text-muted mb-1">Proje Durumları</p>
             </div>
             <div class="row">
