--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Account settings</p>
+                        <p class="preview-subject ellipsis mb-1 text-small">Hesap Ayarları</p>
                     </div>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Change Password</p>
+                        <p class="preview-subject ellipsis mb-1 text-small">Şifre Değiştir</p>
                     </div>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">To-do list</p>
+                        <p class="preview-subject ellipsis mb-1 text-small">Yapılacaklar Listesi</p>
                     </div>
                 </a>
             </div>
@@ -52,7 +52,7 @@
         <span class="nav-link">Navigation</span>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../index.html">
+        <a class="nav-link" href="/Dashboard/Index">
             <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
             </span>
@@ -76,7 +76,7 @@
         </div>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/forms/basic_elements.html">
+        <a class="nav-link" href="/Experience/Index">
             <span class="menu-icon">
                 <i class="mdi mdi-sort-ascending"></i>
             </span>
@@ -108,7 +108,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
+        <a class="nav-link" href="/Portfolio/Index">
             <span class="menu-icon">
                 <i class="mdi mdi-github-circle"></i>
             </span>
