--- a/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
@@ -13,7 +13,7 @@
                 <div class="preview-list">
                     <div class="preview-item border-bottom">
                         <div class="preview-thumbnail">
-                            <img src=@item.User.ImageUrl alt="image" class="rounded-circle" />
+                            <img src="@item.User.ImageUrl" alt="image" class="rounded-circle" />
                         </div>
                         <div class="preview-item-content d-flex flex-grow">
                             <div class="flex-grow">
@@ -21,7 +21,7 @@
                                     <h6 class="preview-subject">@item.User.Name</h6>
                                     <p class="text-muted text-small">@item.Date</p>
                                 </div>
-                                <p class="text-muted">@item.Content</p>
+                                <p class="text-muted">@item.Content.Substring(0,30)...</p>
                             </div>
                         </div>
                     </div>
