todolist view revize

--- a/Core_Proje/Views/Shared/Components/ToDoListPanel/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/ToDoListPanel/Default.cshtml
@@ -23,38 +23,14 @@
                         </li>
                         
                     }
-                    <li>
-                        <div class="form-check form-check-primary">
-                            <label class="form-check-label">
-                                <input class="checkbox" type="checkbox"> Create invoice
-                            </label>
-                        </div>
-                        <i class="remove mdi mdi-close-box"></i>
-                    </li>
-                    <li>
-                        <div class="form-check form-check-primary">
-                            <label class="form-check-label">
-                                <input class="checkbox" type="checkbox"> Meeting with Alita
-                            </label>
-                        </div>
-                        <i class="remove mdi mdi-close-box"></i>
-                    </li>
-                    <li class="completed">
+                    @*<li class="completed">
                         <div class="form-check form-check-primary">
                             <label class="form-check-label">
                                 <input class="checkbox" type="checkbox" checked> Prepare for presentation
                             </label>
                         </div>
                         <i class="remove mdi mdi-close-box"></i>
-                    </li>
-                    <li>
-                        <div class="form-check form-check-primary">
-                            <label class="form-check-label">
-                                <input class="checkbox" type="checkbox"> Plan weekend outing
-                            </label>
-                        </div>
-                        <i class="remove mdi mdi-close-box"></i>
-                    </li>
+                    </li>*@
 
                 </ul>
             </div>
