footer scripts icin partiallar olusturuldu

--- a/Core_Proje/Views/Shared/_WriterLayout.cshtml
+++ b/Core_Proje/Views/Shared/_WriterLayout.cshtml
@@ -10,15 +10,13 @@
 
 <body>
     <div class="container-scroller">
-        <!-- partial:../../partials/_navbar.html -->
+
         @await Html.PartialAsync("_NavbarPartial")
-        <!-- partial -->
+
         <div class="container-fluid page-body-wrapper">
-            <!-- partial:../../partials/_settings-panel.html -->
-            <!-- partial -->
-            <!-- partial:../../partials/_sidebar.html -->
+
             @await Html.PartialAsync("_SidebarPartial")
-            <!-- partial -->
+
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="row">
@@ -26,35 +24,17 @@
                         @RenderBody()
                     </div>
                 </div>
-                <!-- content-wrapper ends -->
-                <!-- partial:../../partials/_footer.html -->
-                <footer class="footer">
-                    <div class="d-sm-flex justify-content-center justify-content-sm-between">
-                        <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2021.  Premium <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap admin template</a> from BootstrapDash. All rights reserved.</span>
-                        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span>
-                    </div>
-                </footer>
-                <!-- partial -->
+
+                @await Html.PartialAsync("_FooterPartial")
+
             </div>
-            <!-- main-panel ends -->
+
         </div>
-        <!-- page-body-wrapper ends -->
+
     </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="~/skydash/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="~/skydash/js/off-canvas.js"></script>
-    <script src="~/skydash/js/hoverable-collapse.js"></script>
-    <script src="~/skydash/js/template.js"></script>
-    <script src="~/skydash/js/settings.js"></script>
-    <script src="~/skydash/js/todolist.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page-->
-    <!-- End custom js for this page-->
+
+    @await Html.PartialAsync("_ScriptsPartial")
+
 </body>
 
 </html>
