--- a/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
@@ -42,6 +42,11 @@
                                     <input type="text" class="form-control form-control-lg" asp-for="Surname" placeholder="Soyad">
                                 </div>
                                 <div class="form-group">
+                                    <label>Kullanıcı Adınız</label>
+                                    <span asp-validation-for="UserName" class="text-danger"></span>
+                                    <input type="text" class="form-control form-control-lg" asp-for="UserName" placeholder="Kullanıcı Adınız ">
+                                </div>
+                                <div class="form-group">
                                     <label>Görsel</label>
                                     <span asp-validation-for="ImageUrl" class="text-danger"></span>
                                     <input type="text" class="form-control form-control-lg" asp-for="ImageUrl">
@@ -63,11 +68,12 @@
                                 </div>
 
                                 <div class="mt-3">
-                                    <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" >Kayıt Ol</a>
+                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Kayıt Ol</button>
+                                    @*<a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Kayıt Ol</a>*@
                                 </div>
                                 @*<div class="text-center mt-4 font-weight-light">
-                                    Already have an account? <a href="login.html" class="text-primary">Login</a>
-                                </div>*@
+            Already have an account? <a href="login.html" class="text-primary">Login</a>
+        </div>*@
                             </form>
                     </div>
                     </div>
