sifre icin identity hatalari turkcelestirildi

--- a/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
@@ -56,6 +56,9 @@
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                     <input type="password" class="form-control form-control-lg" asp-for="Password">
                                 </div>
+                                <div class="text-danger" asp-validation-summary="ModelOnly">
+
+                                </div>
                                 <div class="form-group">
                                     <label>Şifre Tekrar</label>
                                     <span asp-validation-for="ConfrimPassword" class="text-danger"></span>
