--- a/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
@@ -72,7 +72,9 @@
 
                                 <div class="mt-3">
                                     <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Kayıt Ol</button>
-                                    @*<a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Kayıt Ol</a>*@
+                                    <div class="text-center mt-4 font-weight-light">
+                                        Bir hesabın var mı? <a href="/Writer/Login/Index/" class="text-primary">Giriş Yap</a>
+                                    </div>
                                 </div>
                                 @*<div class="text-center mt-4 font-weight-light">
             Already have an account? <a href="login.html" class="text-primary">Login</a>
