--- a/Core_Proje/Areas/Writer/Views/Default/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/Index.cshtml
@@ -6,6 +6,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
+@{ string color = "";}
 
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
@@ -25,11 +26,28 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
+                            if (item.Status== "Yeni Yazı")
+                            {
+                                color = "badge badge-danger";
+                            }
+                            if (item.Status == "Yeni Video")
+                            {
+                                color = "badge badge-warning";
+                            }
+                            if (item.Status == "Konferans")
+                            {
+                                color = "badge badge-info";
+                            }
+                            if (item.Status == "Bootcamp")
+                            {
+                                color = "badge badge-success";
+                            }
+
                             <tr>
                                 <td></td>
                                 <td>@item.Title</td>
                                 <td>@item.Date</td>
-                                <td><label class="badge badge-danger">Pending</label></td>
+                                <td><label class="@color">@item.Status</label></td>
                             </tr>
                         }
                     </tbody>
