--- a/Core_Proje/Areas/Writer/Views/Default/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/Index.cshtml
@@ -49,7 +49,7 @@
                                 <td>@item.Title</td>
                                 <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
                                 <td><label class="@color">@item.Status</label></td>
-                                <td><a href="#" class="btn btn-outline-primary">Detaylar</a></td>
+                                <td><a href="/Writer/Default/AnnouncementDetails/@item.Id" class="btn btn-outline-primary">Detaylar</a></td>
                             </tr>
                         }
                     </tbody>
