--- a/Core_Proje/Areas/Writer/Views/Profile/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Profile/Index.cshtml
@@ -33,14 +33,15 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Resim Seç</label>
-                    <input type="file" asp-for="PictureUrl" >
-                    <div class="input-group col-xs-12">
+                    <label>Resim </label>
+                    <br />
+                    <input type="file" asp-for="Picture" >
+                    @*<div class="input-group col-xs-12">
                         <input type="text" class="form-control file-upload-info" name="ImageUrl" disabled placeholder="Resim seçiniz">
                         <span class="input-group-append">
                             <button class="file-upload-browse btn btn-primary" type="button">Yükle</button>
                         </span>
-                    </div>
+                    </div>*@
                 </div>
 
 
