--- a/Core_Proje/Areas/Writer/Views/DashboardWriter/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/DashboardWriter/Index.cshtml
@@ -9,6 +9,7 @@
         <div class="row">
             <div class="col-12 col-xl-8 mb-4 mb-xl-0">
                 <h3 class="font-weight-bold">Hoşgeldin, @ViewBag.v </h3>
+                <br />
                 <h6 class="font-weight-normal mb-0">AspNet Core Yazar Dashboard Paneli! Yeni Duyurular İçin <span class="text-primary"> Hemen Tıkla!</span></h6>
             </div>
             <div class="col-12 col-xl-4">
@@ -48,18 +49,16 @@
             <div class="col-md-6 mb-4 stretch-card transparent">
                 <div class="card card-tale">
                     <div class="card-body">
-                        <p class="mb-4">Today’s Bookings</p>
-                        <p class="fs-30 mb-2">4006</p>
-                        <p>10.00% (30 days)</p>
+                        <p class="mb-4">Gelen Mesaj Sayısı</p>
+                        <p class="fs-30 mb-2">@ViewBag.v1</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 mb-4 stretch-card transparent">
                 <div class="card card-dark-blue">
                     <div class="card-body">
-                        <p class="mb-4">Total Bookings</p>
-                        <p class="fs-30 mb-2">61344</p>
-                        <p>22.00% (30 days)</p>
+                        <p class="mb-4">Duyuru Sayısı</p>
+                        <p class="fs-30 mb-2">@ViewBag.v2</p>
                     </div>
                 </div>
             </div>
@@ -68,18 +67,16 @@
             <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
                 <div class="card card-light-blue">
                     <div class="card-body">
-                        <p class="mb-4">Number of Meetings</p>
-                        <p class="fs-30 mb-2">34040</p>
-                        <p>2.00% (30 days)</p>
+                        <p class="mb-4">Toplam Kullanıcı Sayısı</p>
+                        <p class="fs-30 mb-2">@ViewBag.v3</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 stretch-card transparent">
                 <div class="card card-light-danger">
                     <div class="card-body">
-                        <p class="mb-4">Number of Clients</p>
-                        <p class="fs-30 mb-2">47033</p>
-                        <p>0.22% (30 days)</p>
+                        <p class="mb-4">Toplam Yetenek Sayısı</p>
+                        <p class="fs-30 mb-2">@ViewBag.v4</p>
                     </div>
                 </div>
             </div>
