--- a/Core_Proje/Areas/Writer/Views/DashboardWriter/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/DashboardWriter/Index.cshtml
@@ -33,7 +33,7 @@
                 <div class="weather-info">
                     <div class="d-flex">
                         <div>
-                            <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i>28<sup>C</sup></h2>
+                            <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i>@ViewBag.v5<sup>C</sup></h2>
                         </div>
                         <div class="ml-2">
                             <h4 class="location font-weight-normal">İstanbul</h4>
