side bar revize edildi message kontroller ve gecici olarak bos index sayfasi olusturuldu

--- a/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
@@ -1,13 +1,13 @@
 ﻿<nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="~/skydash/index.html">
+            <a class="nav-link" href="~/Writer/DashboardWriter/Index">
                 <i class="icon-grid menu-icon"></i>
                 <span class="menu-title">Gösterge Paneli</span>
             </a>
         </li>
-        <li class="nav-item" href="#">
-            <a class="nav-link">
+        <li class="nav-item" >
+            <a class="nav-link" href="/Writer/Message/Index">
                 <i class="icon-mail  menu-icon"></i>
                 <span class="menu-title">Mesajlar</span>
             </a>
@@ -15,15 +15,15 @@
         </li>
 
 
-        <li class="nav-item" href="#">
-            <a class="nav-link">
+        <li class="nav-item" >
+            <a class="nav-link" href="/Writer/Default/Index">
                 <i class="icon-grid-2 menu-icon"></i>
-                <span class="menu-title">Tablolar</span>
+                <span class="menu-title">Duyurular</span>
             </a>
 
         </li>
         <li class="nav-item">
-            <a class="nav-link">
+            <a class="nav-link" href="/Writer/Profile/Index">
                 <i class="mdi mdi-account menu-icon"></i>
                 <span class="menu-title">Profil</span>
             </a>
@@ -31,13 +31,13 @@
 
 
         <li class="nav-item">
-            <a class="nav-link" href="~/skydash/pages/documentation/documentation.html">
+            <a class="nav-link" href="/Writer/Profile/Index">
                 <i class="mdi mdi-settings-box menu-icon"></i>
                 <span class="menu-title">Ayarlar</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="~/skydash/pages/documentation/documentation.html">
+            <a class="nav-link" href="/Writer/Login/LogOut">
                 <i class="icon-power menu-icon"></i>
                 <span class="menu-title">Çıkış Yap</span>
             </a>
