--- a/Core_Proje/Areas/Writer/Views/Default/HeadPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/HeadPartial.cshtml
@@ -14,4 +14,5 @@
     <link rel="stylesheet" href="~/skydash/css/vertical-layout-light/style.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="~/skydash/images/favicon.png" />
+    <link rel="stylesheet" href="~/skydash/vendors/mdi/css/materialdesignicons.min.css">
 </head>
