--- a/Core_Proje/Areas/Writer/Views/Default/_NavbarPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/_NavbarPartial.cshtml
@@ -27,28 +27,16 @@
                     <i class="icon-bell mx-0"></i>
                     <span class="count"></span>
                 </a>
-            
 
-                    @await Component.InvokeAsync("Notification")
 
-                  
-              
+                @await Component.InvokeAsync("Notification")
+
+
+
             </li>
-            <li class="nav-item nav-profile dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                    <img src="~/skydash/images/faces/face28.jpg" alt="profile" />
-                </a>
-                <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                    <a class="dropdown-item">
-                        <i class="ti-settings text-primary"></i>
-                        Settings
-                    </a>
-                    <a class="dropdown-item">
-                        <i class="ti-power-off text-primary"></i>
-                        Logout
-                    </a>
-                </div>
-            </li>
+
+            @await Component.InvokeAsync("Navbar")
+
             <li class="nav-item nav-settings d-none d-lg-flex">
                 <a class="nav-link" href="#">
                     <i class="icon-ellipsis"></i>
