--- a/Core_Proje/Areas/Writer/Views/Message/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/Index.cshtml
@@ -1,9 +1,61 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<WriterMessage>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
+@{ string color = "";}
 
-<h1>Index</h1>
+<div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Gelen Kutusu</h4>
 
-asdsad
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Konu</th>
+                            <th>Tarih</th>
+                            <th>Gönderen</th>
+                            <th>Detaylar</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            //if (item.Status == "Yeni Yazı")
+                            //{
+                            //    color = "badge badge-danger";
+                            //}
+                            //if (item.Status == "Yeni Video")
+                            //{
+                            //    color = "badge badge-warning";
+                            //}
+                            //if (item.Status == "Konferans")
+                            //{
+                            //    color = "badge badge-info";
+                            //}
+                            //if (item.Status == "Bootcamp")
+                            //{
+                            //    color = "badge badge-success";
+                            //}
+
+                        <tr>
+                            <td></td>
+                            <td>@item.WriterMessageId</td>
+                            <td>@item.Subject</td>
+                            <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
+                            <td><a href="/Writer/Default/AnnouncementDetails/@item.WriterMessageId" class="btn btn-outline-primary">Mesajı Gör</a></td>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
