linq expression bussines hatasi cozuldu

--- a/Core_Proje/Areas/Writer/Views/Message/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
-@{ string color = "";}
+@*@{ string color = "";}*@
 
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
