--- a/Core_Proje/Areas/Writer/Views/Message/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/Index.cshtml
@@ -46,9 +46,10 @@
 
                         <tr>
                             <td></td>
-                            <td>@item.WriterMessageId</td>
                             <td>@item.Subject</td>
                             <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
+                            <td>@item.Sender</td>
+
                             <td><a href="/Writer/Default/AnnouncementDetails/@item.WriterMessageId" class="btn btn-outline-primary">Mesajı Gör</a></td>
                         </tr>
                         }
