--- a/Core_Proje/Areas/Writer/Views/Message/ReceiverMessageDetails.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/ReceiverMessageDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EntityLayer.Concrete.WriterMessage
 
 @{
-    ViewData["Title"] = "WriterMessageDetails";
+    ViewData["Title"] = "ReceiverMessageDetails";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
@@ -29,7 +29,7 @@
                                 <p >@Model.Sender</p>
                             </div>
                             <div class="col-md-6" style="text-align: right;">
-                                <a href="/Writer/Message/Index" class="btn btn-danger">Geri</a>
+                                <a href="/Writer/Message/ReceiverMessage" class="btn btn-danger">Geri</a>
                             </div>
                         </div>
 
