giden kutusu sayfasi olusturuldu

--- a/Core_Proje/Areas/Writer/Views/Message/ReceiverMessageDetails.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/ReceiverMessageDetails.cshtml
@@ -26,7 +26,7 @@
                         <div class="row">
                             <div class="col-md-6" style="text-align: left;">
                                 <p class="font-weight-500" style="font-size: 17px; word-break:break-word">Gönderen</p>
-                                <p >@Model.Sender</p>
+                                <p >@Model.SenderName</p>
                             </div>
                             <div class="col-md-6" style="text-align: right;">
                                 <a href="/Writer/Message/ReceiverMessage" class="btn btn-danger">Geri</a>
